# split-every

./: Cargo.toml  README.md
src/: lib.rs
